--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+alembic==1.15.2
 blinker==1.9.0
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
 Flask==3.1.0
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jwt==1.3.1
+Mako==1.3.9
 MarkupSafe==3.0.2
+migrate==0.3.8
 pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
