--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ jwt==1.3.1
 Mako==1.3.9
 MarkupSafe==3.0.2
 migrate==0.3.8
+psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
 SQLAlchemy==2.0.39
 typing_extensions==4.12.2
 Werkzeug==3.1.3
-gunicorn
